Fix: Better structure and optimizations

--- a/data_overview.ipynb
+++ b/data_overview.ipynb
@@ -1,17 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "da838041",
+   "metadata": {},
+   "source": [
+    "# **Initialization**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "98d6da1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn, matplotlib.pyplot as plot\n",
-    "from configuration import (\n",
-    "    training_data,\n",
-    "    label_key\n",
-    ")"
+    "import pandas, seaborn, matplotlib.pyplot as plot\n",
+    "\n",
+    "training_data = pandas.read_csv('data/train.csv')\n",
+    "label_key = 'Life ladder'"
    ]
   },
   {
@@ -24,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "8ec53a2a",
    "metadata": {},
    "outputs": [
@@ -51,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "7ef85a6d",
    "metadata": {},
    "outputs": [
@@ -90,99 +97,99 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1559.0000</td>\n",
-       "      <td>1533.0000</td>\n",
-       "      <td>1549.0000</td>\n",
-       "      <td>1522.0000</td>\n",
-       "      <td>1537.0000</td>\n",
-       "      <td>1488.0000</td>\n",
-       "      <td>1473.0000</td>\n",
-       "      <td>1542.0000</td>\n",
-       "      <td>1545.0000</td>\n",
+       "      <td>1559.000000</td>\n",
+       "      <td>1533.000000</td>\n",
+       "      <td>1549.000000</td>\n",
+       "      <td>1522.000000</td>\n",
+       "      <td>1537.000000</td>\n",
+       "      <td>1488.000000</td>\n",
+       "      <td>1473.000000</td>\n",
+       "      <td>1542.000000</td>\n",
+       "      <td>1545.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>5.4693</td>\n",
-       "      <td>9.3630</td>\n",
-       "      <td>0.8127</td>\n",
-       "      <td>63.3317</td>\n",
-       "      <td>0.7419</td>\n",
-       "      <td>0.0003</td>\n",
-       "      <td>0.7482</td>\n",
-       "      <td>0.7086</td>\n",
-       "      <td>0.2676</td>\n",
+       "      <td>5.469321</td>\n",
+       "      <td>9.362995</td>\n",
+       "      <td>0.812689</td>\n",
+       "      <td>63.331680</td>\n",
+       "      <td>0.741882</td>\n",
+       "      <td>0.000343</td>\n",
+       "      <td>0.748248</td>\n",
+       "      <td>0.708551</td>\n",
+       "      <td>0.267644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.1133</td>\n",
-       "      <td>1.1602</td>\n",
-       "      <td>0.1188</td>\n",
-       "      <td>7.4783</td>\n",
-       "      <td>0.1423</td>\n",
-       "      <td>0.1634</td>\n",
-       "      <td>0.1867</td>\n",
-       "      <td>0.1080</td>\n",
-       "      <td>0.0844</td>\n",
+       "      <td>1.113280</td>\n",
+       "      <td>1.160240</td>\n",
+       "      <td>0.118762</td>\n",
+       "      <td>7.478307</td>\n",
+       "      <td>0.142326</td>\n",
+       "      <td>0.163385</td>\n",
+       "      <td>0.186708</td>\n",
+       "      <td>0.108029</td>\n",
+       "      <td>0.084431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>2.3750</td>\n",
-       "      <td>6.6350</td>\n",
-       "      <td>0.2900</td>\n",
-       "      <td>32.3000</td>\n",
-       "      <td>0.2600</td>\n",
-       "      <td>-0.3350</td>\n",
-       "      <td>0.0350</td>\n",
-       "      <td>0.3220</td>\n",
-       "      <td>0.0830</td>\n",
+       "      <td>2.375000</td>\n",
+       "      <td>6.635000</td>\n",
+       "      <td>0.290000</td>\n",
+       "      <td>32.300000</td>\n",
+       "      <td>0.260000</td>\n",
+       "      <td>-0.335000</td>\n",
+       "      <td>0.035000</td>\n",
+       "      <td>0.322000</td>\n",
+       "      <td>0.083000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>4.6495</td>\n",
-       "      <td>8.4600</td>\n",
-       "      <td>0.7530</td>\n",
-       "      <td>58.3400</td>\n",
-       "      <td>0.6460</td>\n",
-       "      <td>-0.1130</td>\n",
-       "      <td>0.6910</td>\n",
-       "      <td>0.6230</td>\n",
-       "      <td>0.2060</td>\n",
+       "      <td>4.649500</td>\n",
+       "      <td>8.460000</td>\n",
+       "      <td>0.753000</td>\n",
+       "      <td>58.340000</td>\n",
+       "      <td>0.646000</td>\n",
+       "      <td>-0.113000</td>\n",
+       "      <td>0.691000</td>\n",
+       "      <td>0.623000</td>\n",
+       "      <td>0.206000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>5.3740</td>\n",
-       "      <td>9.4560</td>\n",
-       "      <td>0.8350</td>\n",
-       "      <td>65.1800</td>\n",
-       "      <td>0.7630</td>\n",
-       "      <td>-0.0250</td>\n",
-       "      <td>0.8040</td>\n",
-       "      <td>0.7210</td>\n",
-       "      <td>0.2580</td>\n",
+       "      <td>5.374000</td>\n",
+       "      <td>9.456000</td>\n",
+       "      <td>0.835000</td>\n",
+       "      <td>65.180000</td>\n",
+       "      <td>0.763000</td>\n",
+       "      <td>-0.025000</td>\n",
+       "      <td>0.804000</td>\n",
+       "      <td>0.721000</td>\n",
+       "      <td>0.258000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>6.2725</td>\n",
-       "      <td>10.3320</td>\n",
-       "      <td>0.9050</td>\n",
-       "      <td>68.5350</td>\n",
-       "      <td>0.8550</td>\n",
-       "      <td>0.0910</td>\n",
-       "      <td>0.8730</td>\n",
-       "      <td>0.7980</td>\n",
-       "      <td>0.3190</td>\n",
+       "      <td>6.272500</td>\n",
+       "      <td>10.332000</td>\n",
+       "      <td>0.905000</td>\n",
+       "      <td>68.535000</td>\n",
+       "      <td>0.855000</td>\n",
+       "      <td>0.091000</td>\n",
+       "      <td>0.873000</td>\n",
+       "      <td>0.798000</td>\n",
+       "      <td>0.319000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>8.0190</td>\n",
-       "      <td>11.6480</td>\n",
-       "      <td>0.9870</td>\n",
-       "      <td>77.1000</td>\n",
-       "      <td>0.9850</td>\n",
-       "      <td>0.6980</td>\n",
-       "      <td>0.9830</td>\n",
-       "      <td>0.9440</td>\n",
-       "      <td>0.7050</td>\n",
+       "      <td>8.019000</td>\n",
+       "      <td>11.648000</td>\n",
+       "      <td>0.987000</td>\n",
+       "      <td>77.100000</td>\n",
+       "      <td>0.985000</td>\n",
+       "      <td>0.698000</td>\n",
+       "      <td>0.983000</td>\n",
+       "      <td>0.944000</td>\n",
+       "      <td>0.705000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,37 +197,47 @@
       ],
       "text/plain": [
        "       Life ladder  Log GDP per capita  Social support  \\\n",
-       "count    1559.0000           1533.0000       1549.0000   \n",
-       "mean        5.4693              9.3630          0.8127   \n",
-       "std         1.1133              1.1602          0.1188   \n",
-       "min         2.3750              6.6350          0.2900   \n",
-       "25%         4.6495              8.4600          0.7530   \n",
-       "50%         5.3740              9.4560          0.8350   \n",
-       "75%         6.2725             10.3320          0.9050   \n",
-       "max         8.0190             11.6480          0.9870   \n",
+       "count  1559.000000         1533.000000     1549.000000   \n",
+       "mean      5.469321            9.362995        0.812689   \n",
+       "std       1.113280            1.160240        0.118762   \n",
+       "min       2.375000            6.635000        0.290000   \n",
+       "25%       4.649500            8.460000        0.753000   \n",
+       "50%       5.374000            9.456000        0.835000   \n",
+       "75%       6.272500           10.332000        0.905000   \n",
+       "max       8.019000           11.648000        0.987000   \n",
        "\n",
        "       Healthy life expectancy at birth  Freedom to make life choices  \\\n",
-       "count                         1522.0000                     1537.0000   \n",
-       "mean                            63.3317                        0.7419   \n",
-       "std                              7.4783                        0.1423   \n",
-       "min                             32.3000                        0.2600   \n",
-       "25%                             58.3400                        0.6460   \n",
-       "50%                             65.1800                        0.7630   \n",
-       "75%                             68.5350                        0.8550   \n",
-       "max                             77.1000                        0.9850   \n",
+       "count                       1522.000000                   1537.000000   \n",
+       "mean                          63.331680                      0.741882   \n",
+       "std                            7.478307                      0.142326   \n",
+       "min                           32.300000                      0.260000   \n",
+       "25%                           58.340000                      0.646000   \n",
+       "50%                           65.180000                      0.763000   \n",
+       "75%                           68.535000                      0.855000   \n",
+       "max                           77.100000                      0.985000   \n",
        "\n",
-       "       Generosity  Perceptions of corruption  Positive affect  Negative affect  \n",
-       "count   1488.0000                  1473.0000        1542.0000        1545.0000  \n",
-       "mean       0.0003                     0.7482           0.7086           0.2676  \n",
-       "std        0.1634                     0.1867           0.1080           0.0844  \n",
-       "min       -0.3350                     0.0350           0.3220           0.0830  \n",
-       "25%       -0.1130                     0.6910           0.6230           0.2060  \n",
-       "50%       -0.0250                     0.8040           0.7210           0.2580  \n",
-       "75%        0.0910                     0.8730           0.7980           0.3190  \n",
-       "max        0.6980                     0.9830           0.9440           0.7050  "
+       "        Generosity  Perceptions of corruption  Positive affect  \\\n",
+       "count  1488.000000                1473.000000      1542.000000   \n",
+       "mean      0.000343                   0.748248         0.708551   \n",
+       "std       0.163385                   0.186708         0.108029   \n",
+       "min      -0.335000                   0.035000         0.322000   \n",
+       "25%      -0.113000                   0.691000         0.623000   \n",
+       "50%      -0.025000                   0.804000         0.721000   \n",
+       "75%       0.091000                   0.873000         0.798000   \n",
+       "max       0.698000                   0.983000         0.944000   \n",
+       "\n",
+       "       Negative affect  \n",
+       "count      1545.000000  \n",
+       "mean          0.267644  \n",
+       "std           0.084431  \n",
+       "min           0.083000  \n",
+       "25%           0.206000  \n",
+       "50%           0.258000  \n",
+       "75%           0.319000  \n",
+       "max           0.705000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "f8a0b5be",
    "metadata": {},
    "outputs": [
@@ -263,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d7873cb7",
    "metadata": {},
    "outputs": [
@@ -280,6 +297,7 @@
    ],
    "source": [
     "correlation_matrix = training_data.corr()\n",
+    "\n",
     "plot.figure(figsize=(10, 10))\n",
     "seaborn.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plot.title(\"Feature Correlation Heatmap\")\n",
@@ -288,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "aa4a3400",
    "metadata": {},
    "outputs": [
@@ -311,8 +329,8 @@
     "axes = axes.ravel() \n",
     "\n",
     "for index, feature_key in enumerate(features.columns):    \n",
+    "    \n",
     "    axes[index].scatter(features[feature_key], label, s=10, alpha=0.5)\n",
-    "\n",
     "    axes[index].set_xlabel(feature_key)\n",
     "    axes[index].set_ylabel(label_key)\n",
     "\n",
