--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -1,53 +1,73 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dbaac347",
+   "metadata": {},
+   "source": [
+    "# **Initialization**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "id": "d4fb5e8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy, pandas, warnings\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import KFold, cross_val_score\n",
-    "from sklearn.linear_model import LinearRegression, SGDRegressor\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
     "from matplotlib import pyplot as plot\n",
+    "from typing import Literal, get_args\n",
+    "import numpy, pandas, warnings\n",
     "\n",
+    "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
+    "from sklearn.linear_model import LinearRegression, SGDRegressor\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "random_state = 42\n",
-    "numpy.random.seed(random_state) \n",
-    "label_name = 'Life ladder'\n",
     "pandas.options.display.float_format = '{:.4f}'.format\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "random_state = 42\n",
+    "numpy.random.seed(random_state) \n",
+    "\n",
+    "# Data Extraction\n",
+    "\n",
+    "label_key = 'Life ladder'\n",
+    "\n",
     "training_data = pandas.read_csv('data/train.csv')\n",
     "testing_data = pandas.read_csv('data/test.csv')\n",
+    "\n",
+    "features_training = training_data.drop(label_key, axis=1)\n",
+    "label_training = training_data[label_key]\n",
+    "\n",
+    "features_testing = testing_data.drop(label_key, axis=1)\n",
+    "label_testing = testing_data[label_key]\n",
     "\n",
     "preprocessing_pipeline = Pipeline([\n",
     "    ('imputer', SimpleImputer(strategy='median')), \n",
     "    ('scaler', StandardScaler())               \n",
     "])\n",
     "\n",
-    "label_key = 'Life ladder'\n",
+    "# Hyperparameters\n",
+    "\n",
+    "tolerance = 1e-7\n",
+    "max_iterations = 10000\n",
     "alphas = [0.001, 0.005, 0.1]\n",
     "eta0s = [0.001, 0.005, 0.01]\n",
-    "penalties = ['l2', 'l1', 'elasticnet']\n",
+    "penalties = get_args(Literal['l2', 'l1', 'elasticnet'])\n",
+    "learning_rates = ['constant', 'optimal', 'invscaling', 'adaptive']\n",
+    "\n",
     "cross_validator  = KFold(n_splits=4, shuffle=True, random_state=random_state)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 119,
-   "id": "d0dfc178",
+   "cell_type": "markdown",
+   "id": "de0672b2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "features_training = training_data.drop(label_key, axis=1)\n",
-    "label_training = training_data[label_key]"
+    "# **Cross Validation**"
    ]
   },
   {
@@ -55,12 +75,12 @@
    "id": "d5cd4de7",
    "metadata": {},
    "source": [
-    "## **Closed-Form Solution**"
+    "## Closed-Form Solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 21,
    "id": "8ac228a4",
    "metadata": {},
    "outputs": [
@@ -69,7 +89,7 @@
      "output_type": "stream",
      "text": [
       "RMSE Values: [0.6015 0.5274 0.5336 0.5318]\n",
-      "Mean RMSE:  0.5486\n",
+      "Mean RMSE: 0.5486\n",
       "Standard Deviation of RMSE: 0.0307\n"
      ]
     }
@@ -86,7 +106,7 @@
     "            )\n",
     "\n",
     "print(f'RMSE Values: {numpy.round(rmse_values, 4)}')\n",
-    "print(f'Mean RMSE: {rmse_values.mean(): .4f}')\n",
+    "print(f'Mean RMSE: {rmse_values.mean():.4f}')\n",
     "print(f'Standard Deviation of RMSE: {rmse_values.std():.4f}')"
    ]
   },
@@ -95,56 +115,13 @@
    "id": "547a47e8",
    "metadata": {},
    "source": [
-    "## **SGD (Stochastic Gradient Descent) Regressor**"
+    "## SGD (Stochastic Gradient Descent) Regressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 22,
    "id": "156cd537",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE Values: [0.6013 0.5262 0.535  0.5313]\n",
-      "Mean RMSE: 0.5484\n",
-      "Standard Deviation of RMSE: 0.0307\n"
-     ]
-    }
-   ],
-   "source": [
-    "rmse_values = -cross_val_score(\n",
-    "                Pipeline(\n",
-    "                    steps = preprocessing_pipeline.steps + \n",
-    "                    [(\n",
-    "                        'model', SGDRegressor(random_state=random_state)\n",
-    "                    )]\n",
-    "                ), \n",
-    "                features_training, \n",
-    "                label_training, \n",
-    "                cv=cross_validator, \n",
-    "                scoring='neg_root_mean_squared_error'\n",
-    "            )\n",
-    "\n",
-    "print(f'RMSE Values: {numpy.round(rmse_values, 4)}')\n",
-    "print(f'Mean RMSE: {rmse_values.mean():{'.4f'}}')\n",
-    "print(f'Standard Deviation of RMSE: {rmse_values.std():{'.4f'}}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b58e8855",
-   "metadata": {},
-   "source": [
-    "# **Regularization**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "c19c7ffc",
    "metadata": {},
    "outputs": [
     {
@@ -186,35 +163,35 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>l1</td>\n",
+       "      <td>l2</td>\n",
        "      <td>0.0050</td>\n",
        "      <td>0.0010</td>\n",
-       "      <td>0.5489</td>\n",
-       "      <td>0.0307</td>\n",
+       "      <td>0.5486</td>\n",
+       "      <td>0.0301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>l1</td>\n",
        "      <td>0.0010</td>\n",
        "      <td>0.0010</td>\n",
-       "      <td>0.5489</td>\n",
-       "      <td>0.0308</td>\n",
+       "      <td>0.5486</td>\n",
+       "      <td>0.0302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>elasticnet</td>\n",
        "      <td>0.0010</td>\n",
        "      <td>0.0010</td>\n",
-       "      <td>0.5489</td>\n",
-       "      <td>0.0308</td>\n",
+       "      <td>0.5486</td>\n",
+       "      <td>0.0302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>l2</td>\n",
+       "      <td>l1</td>\n",
        "      <td>0.0050</td>\n",
        "      <td>0.0010</td>\n",
-       "      <td>0.5490</td>\n",
-       "      <td>0.0308</td>\n",
+       "      <td>0.5487</td>\n",
+       "      <td>0.0302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -242,14 +219,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>elasticnet</td>\n",
-       "      <td>0.0010</td>\n",
-       "      <td>0.0050</td>\n",
-       "      <td>0.5494</td>\n",
-       "      <td>0.0331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
        "      <td>l1</td>\n",
        "      <td>0.0050</td>\n",
        "      <td>0.0050</td>\n",
@@ -257,15 +226,31 @@
        "      <td>0.0328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>l2</td>\n",
        "      <td>0.1000</td>\n",
        "      <td>0.0010</td>\n",
-       "      <td>0.5499</td>\n",
-       "      <td>0.0287</td>\n",
+       "      <td>0.5497</td>\n",
+       "      <td>0.0289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>l2</td>\n",
+       "      <td>0.1000</td>\n",
+       "      <td>0.0050</td>\n",
+       "      <td>0.5500</td>\n",
+       "      <td>0.0327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>elasticnet</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>0.0050</td>\n",
+       "      <td>0.5504</td>\n",
+       "      <td>0.0327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
        "      <td>l2</td>\n",
        "      <td>0.0010</td>\n",
        "      <td>0.0050</td>\n",
@@ -273,7 +258,7 @@
        "      <td>0.0329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <td>l2</td>\n",
        "      <td>0.0050</td>\n",
        "      <td>0.0050</td>\n",
@@ -281,31 +266,15 @@
        "      <td>0.0328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>14</th>\n",
        "      <td>elasticnet</td>\n",
        "      <td>0.1000</td>\n",
        "      <td>0.0010</td>\n",
-       "      <td>0.5510</td>\n",
-       "      <td>0.0291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>l2</td>\n",
-       "      <td>0.0050</td>\n",
-       "      <td>0.0100</td>\n",
-       "      <td>0.5511</td>\n",
-       "      <td>0.0349</td>\n",
+       "      <td>0.5516</td>\n",
+       "      <td>0.0288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>l2</td>\n",
-       "      <td>0.1000</td>\n",
-       "      <td>0.0050</td>\n",
-       "      <td>0.5512</td>\n",
-       "      <td>0.0320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
        "      <td>elasticnet</td>\n",
        "      <td>0.1000</td>\n",
        "      <td>0.0050</td>\n",
@@ -313,12 +282,20 @@
        "      <td>0.0316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>16</th>\n",
        "      <td>l2</td>\n",
        "      <td>0.1000</td>\n",
        "      <td>0.0100</td>\n",
        "      <td>0.5522</td>\n",
        "      <td>0.0340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>l1</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>0.5537</td>\n",
+       "      <td>0.0326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -338,19 +315,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>l1</td>\n",
-       "      <td>0.0010</td>\n",
-       "      <td>0.0100</td>\n",
-       "      <td>0.5538</td>\n",
-       "      <td>0.0326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
        "      <td>elasticnet</td>\n",
        "      <td>0.0010</td>\n",
        "      <td>0.0100</td>\n",
        "      <td>0.5539</td>\n",
        "      <td>0.0330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>l2</td>\n",
+       "      <td>0.0050</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>0.5539</td>\n",
+       "      <td>0.0335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -399,27 +376,27 @@
       "text/plain": [
        "       Penalty  Alpha  Learning Rate  Mean RMSE  Standard Deviation of RMSE\n",
        "0   elasticnet 0.0050         0.0010     0.5486                      0.0302\n",
-       "1           l1 0.0050         0.0010     0.5489                      0.0307\n",
-       "2           l1 0.0010         0.0010     0.5489                      0.0308\n",
-       "3   elasticnet 0.0010         0.0010     0.5489                      0.0308\n",
-       "4           l2 0.0050         0.0010     0.5490                      0.0308\n",
+       "1           l2 0.0050         0.0010     0.5486                      0.0301\n",
+       "2           l1 0.0010         0.0010     0.5486                      0.0302\n",
+       "3   elasticnet 0.0010         0.0010     0.5486                      0.0302\n",
+       "4           l1 0.0050         0.0010     0.5487                      0.0302\n",
        "5           l2 0.0010         0.0010     0.5490                      0.0308\n",
        "6   elasticnet 0.0050         0.0050     0.5494                      0.0329\n",
        "7           l1 0.0010         0.0050     0.5494                      0.0329\n",
-       "8   elasticnet 0.0010         0.0050     0.5494                      0.0331\n",
-       "9           l1 0.0050         0.0050     0.5495                      0.0328\n",
-       "10          l2 0.1000         0.0010     0.5499                      0.0287\n",
-       "11          l2 0.0010         0.0050     0.5505                      0.0329\n",
-       "12          l2 0.0050         0.0050     0.5505                      0.0328\n",
-       "13  elasticnet 0.1000         0.0010     0.5510                      0.0291\n",
-       "14          l2 0.0050         0.0100     0.5511                      0.0349\n",
-       "15          l2 0.1000         0.0050     0.5512                      0.0320\n",
-       "16  elasticnet 0.1000         0.0050     0.5521                      0.0316\n",
-       "17          l2 0.1000         0.0100     0.5522                      0.0340\n",
+       "8           l1 0.0050         0.0050     0.5495                      0.0328\n",
+       "9           l2 0.1000         0.0010     0.5497                      0.0289\n",
+       "10          l2 0.1000         0.0050     0.5500                      0.0327\n",
+       "11  elasticnet 0.0010         0.0050     0.5504                      0.0327\n",
+       "12          l2 0.0010         0.0050     0.5505                      0.0329\n",
+       "13          l2 0.0050         0.0050     0.5505                      0.0328\n",
+       "14  elasticnet 0.1000         0.0010     0.5516                      0.0288\n",
+       "15  elasticnet 0.1000         0.0050     0.5521                      0.0316\n",
+       "16          l2 0.1000         0.0100     0.5522                      0.0340\n",
+       "17          l1 0.0010         0.0100     0.5537                      0.0326\n",
        "18          l1 0.0050         0.0100     0.5538                      0.0326\n",
        "19  elasticnet 0.0050         0.0100     0.5538                      0.0326\n",
-       "20          l1 0.0010         0.0100     0.5538                      0.0326\n",
-       "21  elasticnet 0.0010         0.0100     0.5539                      0.0330\n",
+       "20  elasticnet 0.0010         0.0100     0.5539                      0.0330\n",
+       "21          l2 0.0050         0.0100     0.5539                      0.0335\n",
        "22          l2 0.0010         0.0100     0.5539                      0.0336\n",
        "23  elasticnet 0.1000         0.0100     0.5562                      0.0323\n",
        "24          l1 0.1000         0.0010     0.5657                      0.0301\n",
@@ -437,7 +414,7 @@
     "for penalty in penalties:\n",
     "    for alpha in alphas:\n",
     "        for eta0 in eta0s:\n",
-    "            pipeline = Pipeline(\n",
+    "            sgd_pipeline = Pipeline(\n",
     "                steps = preprocessing_pipeline.steps + [\n",
     "                    (\n",
     "                        'model', SGDRegressor\n",
@@ -447,14 +424,14 @@
     "                            eta0=eta0,\n",
     "                            learning_rate='constant',\n",
     "                            shuffle=True,\n",
-    "                            max_iter=5000,  \n",
-    "                            tol=1e-4, \n",
+    "                            max_iter=max_iterations,  \n",
+    "                            tol=tolerance, \n",
     "                            random_state=random_state\n",
     "                        )\n",
     "                    )\n",
     "                ]\n",
     "            )\n",
-    "            rmse_values = -cross_val_score(pipeline, features_training, label_training, cv=cross_validator , scoring='neg_root_mean_squared_error')\n",
+    "            rmse_values = -cross_val_score(sgd_pipeline, features_training, label_training, cv=cross_validator , scoring='neg_root_mean_squared_error')\n",
     "            results.append({\n",
     "                'Penalty': penalty,\n",
     "                'Alpha': alpha,\n",
@@ -464,44 +441,21 @@
     "            })\n",
     "\n",
     "results = pandas.DataFrame(results).sort_values('Mean RMSE').reset_index(drop=True)\n",
+    "optimal_configuration = results.iloc[0]\n",
     "display(results)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7de88024",
+   "id": "e289742c",
    "metadata": {},
    "source": [
-    "**Ideal Configuration**"
+    "# **Graphical Representation**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "21a114aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Penalty                       elasticnet\n",
-      "Alpha                             0.0050\n",
-      "Learning Rate                     0.0010\n",
-      "Mean RMSE                         0.5486\n",
-      "Standard Deviation of RMSE        0.0302\n",
-      "Name: 0, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "optimal_configuration = results.iloc[0]\n",
-    "print(optimal_configuration)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "649a7424",
    "metadata": {},
    "outputs": [
@@ -589,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "id": "e4758928",
    "metadata": {},
    "outputs": [
@@ -597,15 +551,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.5526040278918433\n"
+      "RMSE with Closed Form: 0.553040402286619\n",
+      "RMSE with SGD: 0.5526040278918433\n"
      ]
     }
    ],
    "source": [
-    "features_testing = testing_data.drop(label_key, axis=1)\n",
-    "label_testing = testing_data[label_key]\n",
+    "closed_form_pipeline = Pipeline(\n",
+    "    steps=preprocessing_pipeline.steps + [\n",
+    "        ('model', LinearRegression())\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "pipeline = Pipeline(\n",
+    "closed_form_pipeline.fit(features_training, label_training)\n",
+    "print(f'RMSE with Closed Form: {root_mean_squared_error(label_testing, closed_form_pipeline.predict(features_testing))}')\n",
+    "\n",
+    "sgd_pipeline = Pipeline(\n",
     "    steps=preprocessing_pipeline.steps + [\n",
     "        ('model', SGDRegressor(\n",
     "            penalty=optimal_configuration['Penalty'],\n",
@@ -613,15 +574,16 @@
     "            eta0=optimal_configuration['Learning Rate'],\n",
     "            learning_rate='constant',        \n",
     "            random_state=random_state,\n",
-    "            max_iter=5000,\n",
-    "            tol=1e-4,\n",
+    "            max_iter=max_iterations,\n",
+    "            tol=tolerance,\n",
     "            shuffle=True\n",
     "        ))\n",
     "    ]\n",
     ")\n",
     "\n",
-    "pipeline.fit(features_training, label_training)\n",
-    "print(f'RMSE: {root_mean_squared_error(label_testing, pipeline.predict(features_testing))}')"
+    "sgd_pipeline.fit(features_training, label_training)\n",
+    "\n",
+    "print(f'RMSE with SGD: {root_mean_squared_error(label_testing, sgd_pipeline.predict(features_testing))}')"
    ]
   }
  ],
